@@ -91,7 +91,7 @@ public class TimeCombinationModeCalculator implements GaudiModeCalculator {
         List<Integer> places = rankingService.assignStandardPlaces(results.stream().map(r -> (double) r.totalMs()).toList());
 
         List<GaudiRankingEntryResponse> entries = new ArrayList<>();
-        Integer leaderMs = results.isEmpty() ? null : results.get(0).totalMs();
+        Integer leaderMs = results.isEmpty() ? null : results.getFirst().totalMs();
         for (int i = 0; i < results.size(); i++) {
             PersonResult r = results.get(i);
             entries.add(new GaudiRankingEntryResponse(
